--- a/Dynamic_Difficulty/Dynamic_Difficulty.csproj
+++ b/Dynamic_Difficulty/Dynamic_Difficulty.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller.cs" />
+    <Compile Include="Gameplay.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
