Implemented the Minimax algorithem commented the majority of the code and implemented a basic implementation of the gameplay (dynamic still not technically working)

--- a/Dynamic_Difficulty/Dynamic_Difficulty.csproj
+++ b/Dynamic_Difficulty/Dynamic_Difficulty.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Board.cs" />
     <Compile Include="Controller.cs" />
     <Compile Include="GamePlay.cs" />
+    <Compile Include="Minimax.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
