--- a/Dynamic_Difficulty/Dynamic_Difficulty.csproj
+++ b/Dynamic_Difficulty/Dynamic_Difficulty.csproj
@@ -78,5 +78,14 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\o.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\board.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
