Changed the images to have a black background.

--- a/Dynamic_Difficulty/Dynamic_Difficulty.csproj
+++ b/Dynamic_Difficulty/Dynamic_Difficulty.csproj
@@ -87,5 +87,14 @@
   <ItemGroup>
     <None Include="Resources\board.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\board.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\o.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\x.jpeg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
